--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js current
-        uses: actions/setup-node@v3
+      - name: Use bun current
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: current
+          bun-version: latest
 
       - name: Install dependencies & build
         run: |
-          npm ci
-          npm run build
+          bun ci
+          bun build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
