--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          bun install --production
+          bun install --frozen-lockfile
           bun build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
