--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          bun install --frozen-lockfile
-          bun build
+          bunx @11ty/eleventy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
