--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,10 @@ jobs:
           #publish_branch is the branch in the repository.
           #this is where you need to point GitHub pages
           publish_branch: gh-pages
+      - name: deploy2nekoweb
+        uses: deploy2nekoweb/deploy2nekoweb@v4
+        with:
+          nekoweb-api-key: ${{ secrets.NEKOWEB_API_KEY }}
+          nekoweb-cookie: ${{ secrets.NEKOWEB_COOKIE }}
+          nekoweb-folder: 'public'
+          directory: 'public'
