--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
+          bun install luxon
           bunx @11ty/eleventy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
