--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install dependencies & build
         run: |
           bun install luxon
+          bun install @11ty/eleventy-img
           bunx @11ty/eleventy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
